--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
-h1, p.readableText {
-  text-align: center;
-  font-size: 40px; }
+body {
+  background-color: #D6DBDF;
+}
 
 div.dropdown {
   position: relative;
   display: inline-block; }
+
 div.dropdown-content {
   display: none;
   position: absolute;
@@ -12,60 +13,18 @@ div.dropdown-content {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1; }
+
 div.dropdown-content a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block; }
+
 div.dropdown:hover .dropbtn {
-  background-color: #BA55D3; }
+  background-color: #3e8e41; }
+
 div.dropdown:hover .dropdown-content {
   display: block; }
+
 div.dropdown-content a:hover {
   background-color: #ddd; }
-
-button.dropbtn {
-  background-color: #751AE8;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none; }
-
-span.green {
-  color: #751AE8; }
-
-span.silver {
-  color: #C9D0CE; }
-
-img {
-  padding-bottom: 50px; }
-
-h1 {
-  text-align: center;
-  font-size: 80px;
-  display: inline-block;
-  font-family: "Times New Roman", Times, serif; }
-
-p.readableText {
-  font-family: "Times New Roman", Times, serif; }
-
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%; }
-
-#necessaryId {
-  font-family: "Ariel", Times, serif;
-  color: #339933;
-  position: fixed;
-  bottom: 10px;
-  left: 20px;
-  width: 100%; }
-
-@media (min-width: 768px) {
-  #necessaryId {
-    position: fixed;
-    left: 350px; } }
-
-/*# sourceMappingURL=styles.css.map */
