--- a/styles.scss
+++ b/styles.scss
@@ -77,6 +77,9 @@ p.readableText {
   width: 50%;
 }
 
+span.silver {
+  color: #C9D0CE; }
+
 
 #necessaryId {
   font-family: "Ariel", Times, serif;
