--- a/style.css
+++ b/style.css
@@ -2,6 +2,28 @@ h1, p.readableText {
   text-align: center;
   font-size: 40px; }
 
+div.dropdown {
+  position: relative;
+  display: inline-block; }
+div.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1; }
+div.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block; }
+div.dropdown:hover .dropbtn {
+  background-color: #A569BD; }
+div.dropdown:hover .dropdown-content {
+  display: block; }
+div.dropdown-content a:hover {
+  background-color: #ddd; }
+
 button.dropbtn {
   background-color: #751AE8;
   color: white;
