--- a/styles.scss
+++ b/styles.scss
@@ -12,7 +12,7 @@ div{
     display: inline-block;
   }
 
-  .dropdown-content {
+.dropdown-content {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
@@ -21,22 +21,22 @@ div{
     z-index: 1;
   }
 
-  .dropdown-content a {
+.dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
   }
 
-  .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+.dropdown:hover .dropbtn {
+    background-color:  #A569BD;
   }
 
-  .dropdown:hover .dropdown-content {
+.dropdown:hover .dropdown-content {
     display: block;
   }
 
-  .dropdown-content a:hover {
+.dropdown-content a:hover {
     background-color: #ddd;
   }
 }
