--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,31 +16,29 @@
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
           <a class="navbar-brand" href="/">CRLS <span class="silver">TAKES</span></a>
           <div class="dropdown">
-           <button class="regbtn" href="/takesG">Takes</button>
-           <div class="dropdown-content">
+            <button class="regbtn" href="/takesG">Takes</button>
+            <div class="dropdown-content">
              <a href="/takesG">General</a>
              <a href="/error">Freezing Cold</a>
              <a href="/error">Cool</a>
              <a href="/error">Lukewarm</a>
              <a href="/error">Hot</a>
              <a href="/error">Scalding</a>
-           </div>
+            </div>
           </div>
-          <div class="dropdown">
-           <button class="regbtn" href="/blogsG">Blogs</button>
-           <div class="dropdown-content">
-             <a href="/blogsG">General</a>
-             <a href="/error">Mass News</a>
-             <a href="/error">Pop</a>
-             <a href="/error">Sports</a>
-             <a href="/error">Featured</a>
-           </div>
+          <button class="regbtn" href="/blogsG">Blogs</button>
+          <div class="dropdown-content">
+           <a href="/blogsG">General</a>
+           <a href="/error">Mass News</a>
+           <a href="/error">Pop</a>
+           <a href="/error">Sports</a>
+           <a href="/error">Featured</a>
           </div>
           <div class="dropdown">
             <ul class="navbar-nav mr-auto mt-2">
-              <li class="nav-item"><button class="regbtn" href="/error">Write</button></li>
-              <li class="nav-item"><button class="regbtn" href="/error">My Profile</button></li>
-              <li class="nav-item"><button class="regbtn" href="/about">About</button></li>
+              <li class="nav-item"><a class="nav-link" href="/error">Write</a></li>
+              <li class="nav-item"><a class="nav-link" href="/error">My Profile</a></li>
+              <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
             </ul>
           </div>
           <ul class="navbar-nav ml-auto mt-2">
