--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
           <a class="navbar-brand" href="/">CRLS <span class="silver">TAKES</span></a>
           <div class="dropdown">
-            <button class="regbtn" href="/takesG">Takes</button>
+            <button class="dropbtn" href="/takesG">Takes</button>
             <div class="dropdown-content">
              <a href="/takesG">General</a>
              <a href="/error">Freezing Cold</a>
@@ -26,21 +26,21 @@
              <a href="/error">Scalding</a>
             </div>
           </div>
-          <button class="regbtn" href="/blogsG">Blogs</button>
-          <div class="dropdown-content">
-           <a href="/blogsG">General</a>
-           <a href="/error">Mass News</a>
-           <a href="/error">Pop</a>
-           <a href="/error">Sports</a>
-           <a href="/error">Featured</a>
-          </div>
           <div class="dropdown">
+            <button class="dropbtn" href="/blogsG">Blogs</button>
+            <div class="dropdown-content">
+             <a href="/blogsG">General</a>
+             <a href="/error">Mass News</a>
+             <a href="/error">Pop</a>
+             <a href="/error">Sports</a>
+             <a href="/error">Featured</a>
+           </div>
+          </div>
             <ul class="navbar-nav mr-auto mt-2">
               <li class="nav-item"><a class="nav-link" href="/error">Write</a></li>
               <li class="nav-item"><a class="nav-link" href="/error">My Profile</a></li>
               <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
             </ul>
-          </div>
           <ul class="navbar-nav ml-auto mt-2">
             <li class="nav-item"><a class="nav-link" href="/error">Register</a></li>
             <li class="nav-item"><a class="nav-link" href="/error">Log In</a></li>
