--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,7 @@
     <br />
     <br />
     <h1 class="center">
-      CRLS <span class="green">TAKES</span>
+      CRLS <span class="purple">TAKES</span>
     </h1>
     <p class="readableText">
       CRLS Takes is an attempt by a CRLS student to replace the sports section of
@@ -30,5 +30,45 @@
       website will clear things up.
     </p>
   </div>
-  <img class="center" src="../CRLS2.jpg" alt="Image of CRLS" height=500>
+  <div class="container">
+    <div class="row">
+     <div class="column">
+       <div class="card">
+         <img src="/static/Will.jpg" alt="Will" style="width:100%">
+         <div class="cont4iner">
+           <h2>Will Cooper</h2>
+           <p class="title">CEO &amp; Founder</p>
+           <p>Wavy</p>
+           <p>example@example.com</p>
+           <p><button class="aboutMe">Contact</button></p>
+         </div>
+       </div>
+     </div>
+     <div class="column">
+       <div class="card">
+         <img src="/static/Max.jpg" alt="Max" style="width:100%">
+         <div class="cont4iner">
+           <h2>Max Davis</h2>
+           <p class="title">Art Director</p>
+           <p>Tight</p>
+           <p>example@example.com</p>
+           <p><button class="aboutMe">Contact</button></p>
+         </div>
+       </div>
+     </div>
+     <div class="column">
+       <div class="card">
+         <img src="/static/Albert.jpg" alt="Albert" style="width:100%" />
+         <div class="cont4iner">
+           <h2>Albert Liu</h2>
+           <p class="title">Poo Poo</p>
+           <p>Wack</p>
+           <p>example@example.com</p>
+           <p><button class="aboutMe">Contact</button></p>
+         </div>
+       </div>
+     </div>
+    </div>
+    <img src="/static/CRLS2.jpg" alt="Image of CRLS" height=500>
+  </div>
 {% endblock %}
