--- a/templates/error.html
+++ b/templates/error.html
@@ -6,7 +6,7 @@
   <body>
     Sorry, this page currently has no content
     <p>
-      <a href="home.html"> Click here to go back to home page </a>
+      <a href="/"> Click here to go back to home page </a>
     </p>
   </body>
 </html>
