--- a/templates/index.html
+++ b/templates/index.html
@@ -3,17 +3,17 @@
 {% block heading %} Index {% endblock %}
 
 {% block main %}
-  <div>
-    <br />
-    <br />
-    <br />
-    <h1 class="center">
-      Welcome to CRLS <span class="green">TAKES</span>!
-    </h1>
-    <img class="center" src="/static/CRLS1.jpg" alt="Image of CRLS" style="width:800px;height:600px;" />
-  </div>
-  <p class="center">
-    Just to make it a little easier to navigate, the only working links (currently) are this page (index),
-    the about sections (about.html), general takes (takesG.html), and general Blogs (blogsG.html).
-  </p>
+      <br />
+      <div class="container">
+        <div class="jumbotron">
+          <img src="/static/Will.jpg" align="right" alt="Takes Logo" style="width:150px;height:250px;"/> 
+          <h1>
+            CRLS <span class="purple">TAKES</span>!
+          </h1>
+          <p>
+            Because the Register Forum sucks and you deserve better. You're welcome.
+          </p>
+        </div>
+        <img class="shake" src="/static/CRLS1.jpg" alt="Image of CRLS" style="width:1100px;height:850px;" />
+      </div>
 {% endblock %}
