--- a/templates/takesG.html
+++ b/templates/takesG.html
@@ -8,11 +8,7 @@
     <br />
     <br />
     <h1>
-      <span style="color:green;">T</span>
-      <span style="color:#7CFC00;">A</span>
-      <span style="color:#006400;">K</span>
-      <span style="color:#2E8B57;">E</span>
-      <span style="color:#00FA9A;">S</span>
+      <span class="purple">TAKES</span>
     </h1>
   </div>
   <div class="container">
@@ -30,9 +26,5 @@
       section, you can learn what these buttons will be used for in the near future.
     </p>
     <br />
-    <p id="necessaryId">
-      This would be like a footnote which credits the authors and references publishers or someting.
-      For now I just need it here to fulfill the ID requirement.
-    </p>
   </div>
 {% endblock %}
