--- a/static/style.css
+++ b/static/style.css
@@ -2,28 +2,6 @@ h1, p.readableText {
   text-align: center;
   font-size: 40px; }
 
-div.dropdown {
-  position: relative;
-  display: inline-block; }
-div.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1; }
-div.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block; }
-div.dropdown:hover .dropbtn {
-  background-color: #A569BD; }
-div.dropdown:hover .dropdown-content {
-  display: block; }
-div.dropdown-content a:hover {
-  background-color: #ddd; }
-
 button.dropbtn {
   background-color: #751AE8;
   color: white;
@@ -31,7 +9,7 @@ button.dropbtn {
   font-size: 16px;
   border: none; }
 
-span.green {
+span.purple {
   color: #751AE8; }
 
 img {
@@ -54,18 +32,5 @@ p.readableText {
 
 span.silver {
   color: #C9D0CE; }
-
-#necessaryId {
-  font-family: "Ariel", Times, serif;
-  color: #339933;
-  position: fixed;
-  bottom: 10px;
-  left: 20px;
-  width: 100%; }
-
-@media (min-width: 768px) {
-  #necessaryId {
-    position: fixed;
-    left: 350px; } }
 
 /*# sourceMappingURL=style.css.map */
