--- a/templates/takesG.html
+++ b/templates/takesG.html
@@ -12,19 +12,54 @@
     </h1>
   </div>
   <div class="container">
-    <div class="row">
-      <div class="col-sm"><button type="button" class="btn btn-primary">Freezing Cold</button></div>
-      <div class="col-sm"><button type="button" class="btn btn-info">Cool</button></div>
-      <div class="col-sm"><button type="button" class="btn btn-secondary">Lukewarm</button></div>
-      <div class="col-sm"><button type="button" class="btn btn-warning">Hot</button></div>
-      <div class="col-sm"><button type="button" class="btn btn-danger">Scalding</button></div>
+
+    <button class="accordion">Freezing Cold</button>
+    <div class="panel">
+     <p>Lorem ipsum...</p>
     </div>
+
+    <button class="accordion">Cool</button>
+    <div class="panel">
+     <p>Lorem ipsum...</p>
+    </div>
+
+    <button class="accordion">Lukewarm</button>
+    <div class="panel">
+     <p>Lorem ipsum...</p>
+    </div>
+
+    <button class="accordion">Hot</button>
+    <div class="panel">
+     <p>Lorem ipsum...</p>
+    </div>
+
+    <button class="accordion">Scalding</button>
+    <div class="panel">
+     <p>Lorem ipsum...</p>
+     </div>
+
     <br />
     <p class="readableText">
       These buttons don't really do anything yet, but their making incorporates the grid
-      component of bootstrap that this problem set is required to have. If you go to the  <a href="about.html">about</a>
+      component of bootstrap that this problem set is required to have. If you go to the  <a href="/about">about</a>
       section, you can learn what these buttons will be used for in the near future.
     </p>
     <br />
   </div>
+  <script>
+  var acc = document.getElementsByClassName("accordion");
+  var i;
+
+  for (i = 0; i < acc.length; i++) {
+    acc[i].addEventListener("click", function() {
+      this.classList.toggle("active");
+      var panel = this.nextElementSibling;
+      if (panel.style.maxHeight){
+        panel.style.maxHeight = null;
+      } else {
+        panel.style.maxHeight = panel.scrollHeight + "px";
+      }
+    });
+  }
+  </script>
 {% endblock %}
