--- a/templates/takesG.html
+++ b/templates/takesG.html
@@ -15,27 +15,42 @@
 
     <button class="accordion">Freezing Cold</button>
     <div class="panel">
-     <p>Lorem ipsum...</p>
+     <p class="padded">Don't even bother
+       <br />
+       <button class="hubber">Take me pls tho</button>
+     </p>
     </div>
 
     <button class="accordion">Cool</button>
     <div class="panel">
-     <p>Lorem ipsum...</p>
+     <p class="padded">People generally don't agree but O.K.
+       <br />
+       <button class="hubber">Take me pls</button>
+     </p>
     </div>
 
     <button class="accordion">Lukewarm</button>
     <div class="panel">
-     <p>Lorem ipsum...</p>
+     <p class="padded">Meh
+       <br />
+       <button class="hubber">Take me</button>
+     </p>
     </div>
 
     <button class="accordion">Hot</button>
     <div class="panel">
-     <p>Lorem ipsum...</p>
+     <p class="padded">This shit hot. Be careful my guy.
+       <br />
+       <button class="hubber">Take me pls</button>
+     </p>
     </div>
 
     <button class="accordion">Scalding</button>
     <div class="panel">
-     <p>Lorem ipsum...</p>
+     <p class="padded">Don't even bother
+       <br />
+       <button class="hubber">Take me pls tho</button>
+     </p>
      </div>
 
     <br />
