--- a/templates/blogsG.html
+++ b/templates/blogsG.html
@@ -8,7 +8,7 @@
     <br />
     <br />
     <h1>
-      <span class="green">BBBLLLLOOOOOOGGGGGSSS</span>
+      <span class="purple">BLOGS</span>
     </h1>
     <p text="centered">
       So I don't really know what role a table would play in the final CRLS Takes website, but for the time being,
