--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
 {% block main %}
       <br />
       <div class="container">
-        <div class="jumbotron"> 
+        <div class="jumbotron">
           <h1>
-            CRLS <span class="purple">TAKES</span>!
+            CRLS <span class="purple">TAKES</span>
           </h1>
           <p>
             Because the Register Forum sucks and you deserve better. You're welcome.
