--- a/templates/takesG.html
+++ b/templates/takesG.html
@@ -55,8 +55,7 @@
 
     <br />
     <p class="readableText">
-      These buttons don't really do anything yet, but their making incorporates the grid
-      component of bootstrap that this problem set is required to have. If you go to the  <a href="/about">about</a>
+      These buttons don't really do anything yet. If you go to the  <a href="/about">about</a>
       section, you can learn what these buttons will be used for in the near future.
     </p>
     <br />
