--- a/templates/index.html
+++ b/templates/index.html
@@ -15,23 +15,28 @@
         </div>
         <button class="accordion">Why CRLS Takes</button>
         <div class="panel">
-         <p class="padded">Don't even bother
+         <p class="padded">Find out more on the "about" page.
            <br />
-           <button class="hubber">Take me pls tho</button>
+           <button onclick="location.href='/about'" type="button" class="hubber">
+             About</button>
          </p>
         </div>
 
         <button class="accordion">Takes</button>
         <div class="panel">
-         <p class="padded">People generally don't agree but O.K.
-           <br />
-           <button class="hubber">Take me pls</button>
-         </p>
+          <br />
+         <button class="pill">Freezing Cold</button>
+         <button class="pill">Cool</button>
+         <button class="pill">Lukewarm</button>
+         <button class="pill">Hot</button>
+         <button onclick="location.href='/scalding'" type="button" class="pill">
+           Scalding</button>
+         <br />
         </div>
 
         <button class="accordion">Blogs</button>
         <div class="panel">
-         <p class="padded">Meh
+         <p class="padded">This is where all the good stuff is. I think.
            <br />
            <button class="hubber">Take me</button>
          </p>
@@ -39,9 +44,10 @@
 
         <button class="accordion">Getting Started with an Account</button>
         <div class="panel">
-         <p class="padded">This shit hot. Be careful my guy.
+         <p class="padded">New to the site? Get started with a new account by clicking the button below.
            <br />
-           <button class="hubber">Take me pls</button>
+          <button onclick="location.href='/error'" type="button" class="hubber">
+            Register</button>
          </p>
         </div>
         <br />
