--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,9 @@
       <div class="container">
         <div class="jumbotron">
           <h1>
-            CRLS <span class="purple">TAKES</span>
+            CRLS <span class="purple">TAKES           </span>
           </h1>
+          <img class="shake" src="/static/logo.jpg" alt="Logo" style="width:200px;height:200px;" />
           <p>
             Because the Register Forum sucks and you deserve better. You're welcome.
           </p>
@@ -51,7 +52,7 @@
          </p>
         </div>
         <br />
-        <img class="shake" src="/static/CRLS1.jpg" alt="Image of CRLS" style="width:1100px;height:850px;" />
+        <img class="center" src="/static/CRLS1.jpg" alt="Image of CRLS" style="width:1100px;height:850px;" />
       </div>
       <script>
       var acc = document.getElementsByClassName("accordion");
