started popblogs html file

--- a/templates/blogsG.html
+++ b/templates/blogsG.html
@@ -8,8 +8,6 @@
     <h1>
       <span class="purple">BLOGS</span>
     </h1>
-  </div>
-  <div class="container">
     <button class="accordion">Mass News</button>
     <div class="panel">
      <p class="padded"> This is the "it be like that sometimes" section.
@@ -31,7 +29,8 @@
      <p class="padded"> I think pop is short for population so click this button to
        eliminate the population
        <br />
-       <button class="hubber">Eliminate</button>
+       <button onclick="location.href='/popblogs'" type="button" class="hubber">
+         Eliminate</button>
      </p>
     </div>
 
