--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,7 +33,7 @@
               <div class="dropdown-content">
                <a href="/blogsG">General</a>
                <a href="/error">Mass News</a>
-               <a href="/error">Pop</a>
+               <a href="/popblogs">Pop</a>
                <a href="/error">Sports</a>
                <a href="/error">Featured</a>
              </div>
