--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
         <div class="panel">
          <p class="padded">New to the site? Get started with a new account by clicking the button below.
            <br />
-          <button onclick="location.href='/error'" type="button" class="hubber">
+          <button onclick="location.href='/register'" type="button" class="hubber">
             Register</button>
          </p>
         </div>
