--- a/templates/layout.html
+++ b/templates/layout.html
@@ -44,8 +44,8 @@
                 <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
               </ul>
             <ul class="navbar-nav ml-auto mt-2">
-              <li class="nav-item"><a class="nav-link" href="/error">Register</a></li>
-              <li class="nav-item"><a class="nav-link" href="/error">Log In</a></li>
+              <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+              <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
             </ul>
           </div>
         </nav>
