--- a/templates/error.html
+++ b/templates/error.html
@@ -4,7 +4,7 @@
     <title>Blank Page</title>
   </head>
   <body>
-    Sorry, this page currently has no content
+    {{ message }}
     <p>
       <a href="/"> Click here to go back to home page </a>
     </p>
