--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,7 +40,7 @@
             </div>
               <ul class="navbar-nav mr-auto mt-2">
                 <li class="nav-item"><a class="nav-link" href="/write">Write</a></li>
-                <li class="nav-item"><a class="nav-link" href="/error">My Profile</a></li>
+                <li class="nav-item"><a class="nav-link" href="/profile">My Profile</a></li>
                 <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
               </ul>
             <ul class="navbar-nav ml-auto mt-2">
