--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,7 +8,8 @@
     <br />
     <br />
     <h1>
-      CRLS <span class="purple">TAKES</span>
+      CRLS <span class="purple">TAKES</span><br />
+      Welcome, {{ username }}
     </h1>
     <p class="readableText">
       CRLS Takes is an attempt by a CRLS student to replace the sports section of
