--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
           <h1>
             CRLS <span class="purple">TAKES</span>
           </h1>
-          <img class="shake" src="/static/logo.jpg" alt="Logo" style="width:200px;height:200px;" />
+          <img class="shake" src="/static/logo.ico" alt="Logo" style="width:200px;height:200px;" />
           <p>
             Because the Register Forum sucks and you deserve better. You're welcome.
           </p>
