--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,14 +39,21 @@
              </div>
             </div>
               <ul class="navbar-nav mr-auto mt-2">
-                <li class="nav-item"><a class="nav-link" href="/write">Write</a></li>
-                <li class="nav-item"><a class="nav-link" href="/profile">My Profile</a></li>
                 <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+            {% if session.user_id %}
+                <li class="nav-item"><a class="nav-link" href="/write">Write</a></li>
+                <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
               </ul>
+            <ul class="navbar-nav ml-auto mt-2">
+              <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+            </ul>
+            {% else %}
+            </ul>
             <ul class="navbar-nav ml-auto mt-2">
               <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
               <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
             </ul>
+            {% endif %}
           </div>
         </nav>
       </header>
