--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,9 @@
       <header>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
           <div class="container">
-            <a class="navbar-brand" href="/">CRLS <span class="silver">TAKES</span></a>
+            <a class="navbar-brand" href="/">
+                <img src="/static/WebLogo.png" alt="CRLS-Takes Logo #1" style="width:20%">
+            </a>
             <div class="dropdown">
               <button class="dropbtn" href="/takesG">Takes</button>
               <div class="dropdown-content">
