--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,9 +16,8 @@
       <header>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
           <div class="container">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-left" href="/">
                 <img src="/static/WebLogo.png" alt="CRLS-Takes Logo #1" style="width:20%">
-            </a>
             <div class="dropdown">
               <button class="dropbtn" href="/takesG">Takes</button>
               <div class="dropdown-content">
@@ -42,6 +41,7 @@
             </div>
               <ul class="navbar-nav mr-auto mt-2">
                 <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+                
             {% if session.user_id %}
                 <li class="nav-item"><a class="nav-link" href="/write">Write</a></li>
                 <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
