--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,48 +14,49 @@
     </head>
     <body>
       <header>
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="container">
-            <a class="navbar-left" href="/">
-                <img src="/static/WebLogo.png" alt="CRLS-Takes Logo #1" style="width:20%">
-            <div class="dropdown">
-              <button class="dropbtn" href="/takesG">Takes</button>
-              <div class="dropdown-content">
-               <a href="/takesG">General</a>
-               <a href="/error">Freezing Cold</a>
-               <a href="/error">Cool</a>
-               <a href="/error">Lukewarm</a>
-               <a href="/error">Hot</a>
-               <a href="/error">Scalding</a>
-              </div>
+            <br />
+            <div class="container">
+              <a class="navbar-brand" href="/">
+                    <img src="/static/WebLogo.png" alt="CRLS-Takes Logo #1" style="width:30%; margin-bottom:-40px">
+                  </a>
             </div>
-            <div class="dropdown">
-              <button class="dropbtn" href="/blogsG">Blogs</button>
-              <div class="dropdown-content">
-               <a href="/blogsG">General</a>
-               <a href="/error">Mass News</a>
-               <a href="/popblogs">Pop</a>
-               <a href="/error">Sports</a>
-               <a href="/error">Featured</a>
-             </div>
-            </div>
-              <ul class="navbar-nav mr-auto mt-2">
-                <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-                
-            {% if session.user_id %}
-                <li class="nav-item"><a class="nav-link" href="/write">Write</a></li>
-                <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
+              <ul class="navbar-nav ml-auto">
+                {% if session.user_id %}
+                <div class="container">
+                  <div class="dropdown">
+                    <button class="dropbtn" href="/takesG">Takes</button>
+                    <div class="dropdown-content">
+                      <a href="/takesG">General </a>
+                      <a href="/error">Freezing Cold </a>
+                      <a href="/error">Cool</a>
+                      <a href="/error">Lukewarm</a>
+                      <a href="/error">Hot</a>
+                      <a href="/error">Scalding</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="dropdown">
+                  <button class="dropbtn" href="/takesG">Blogs</button>
+                  <div class="dropdown-content">
+                    <a href="/takesG">General</a>
+                    <a href="/error">Mass News</a>
+                    <a href="/error">Pop</a>
+                    <a href="/error">Sports</a>
+                    <a href="/error">Featured</a>
+                  </div>
+                </div>
+                <div class="container"><li class="nav-item"><a class="nav-link" href="/about" style="margin-top:10px">About</a></li></div>
+                <div class="container"><li class="nav-item"><a class="nav-link" href="/write" style="margin-top:10px">Write</a></li></div>
+                <div class="container"><li class="nav-item"><a class="nav-link" href="/profile" style="margin-top:10px">Profile</a></li></div>
+                <div class="container"><li class="nav-item"><a class="nav-link" href="/logout" style="margin-top:10px">Logout</a></li></div>
+                {% else %}
+                <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+                <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
+                {% endif %}
               </ul>
-            <ul class="navbar-nav ml-auto mt-2">
-              <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
-            </ul>
-            {% else %}
-            </ul>
-            <ul class="navbar-nav ml-auto mt-2">
-              <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-              <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
-            </ul>
-            {% endif %}
+            </div>
           </div>
         </nav>
       </header>
@@ -63,8 +64,8 @@
             {% block main %}  {% endblock %}
       </main>
       <footer class="small text-center text-muted">
-            <a>Brought to you by Will Cooper and Max Davis</a>
-            <br />
+        <a>Brought to you by Will Cooper and Max Davis</a>
       </footer>
+      <br />
     </body>
 </html>
