--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,15 +14,15 @@
     </head>
     <body>
       <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
           <div class="container">
             <br />
             <div class="container">
               <a class="navbar-brand" href="/">
-                    <img src="/static/WebLogo.png" alt="CRLS-Takes Logo #1" style="width:30%; margin-bottom:-40px">
+                    <img src="/static/WebLogo.png" alt="CRLS-Takes Logo #1" style="width:30%; margin-bottom:-40px; margin-left:-13px">
                   </a>
             </div>
-              <ul class="navbar-nav ml-auto">
+              <ul class="navbar-nav mr-auto">
                 {% if session.user_id %}
                 <div class="container">
                   <div class="dropdown">
