write page additions

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,9 +38,9 @@
                   </div>
                 </div>
                 <div class="dropdown">
-                  <button class="dropbtn" href="/takesG">Blogs</button>
+                  <button class="dropbtn" href="/blogsG">Blogs</button>
                   <div class="dropdown-content">
-                    <a href="/takesG">General</a>
+                    <a href="/blogsG">General</a>
                     <a href="/error">Mass News</a>
                     <a href="/error">Pop</a>
                     <a href="/error">Sports</a>
