--- a/templates/write.html
+++ b/templates/write.html
@@ -4,15 +4,11 @@
 
 {% block main %}
   <div class="container">
+    <br />
     <form action="/write" method="post">
-      <div class="form-group">
-          <input class="form-control" name="blogN" placeholder="Title of Blog... " id="blogN" type="text">
-      </div>
-        <div class="form-group">
-            <input class="form-control" name="blog" placeholder="Write About..." id="blog" type="text">
-        </div>
-        <br>
-        <button class="btn btn-primary" type="submit">Submit</button>
+      <input type="radio" name="type" value="take"> Take<br>
+      <input type="radio" name="type" value="blog"> Blog<br>
+      <button class="btn btn-primary" type="submit">Submit</button>
     </form>
   </div>
 {% endblock %}
