--- a/templates/writeB.html
+++ b/templates/writeB.html
@@ -5,7 +5,7 @@
 {% block main %}
   <div class="container">
     <br />
-    <form action="/write" method="post">
+    <form action="/writeB" method="post">
       <div class="form-group">
           <input class="form-control" name="blogN" placeholder="Title... " id="blogN" type="text">
       </div>
