--- a/templates/writeB.html
+++ b/templates/writeB.html
@@ -10,9 +10,8 @@
           <input class="form-control" name="blogN" placeholder="Title... " id="blogN" type="text">
       </div>
         <div class="form-group">
-            <input class="form-control" name="blog" placeholder="Write About..." id="blog" type="text">
+            <textarea class="form-control" placeholder="Write About..." id="blog" type="text" name="blog" style="width:1000px;height:150px;"></textarea>
         </div>
-        <br>
         <button class="btn btn-primary" type="submit">Submit</button>
     </form>
   </div>
