--- a/templates/layout.html
+++ b/templates/layout.html
@@ -41,7 +41,7 @@
                   <button class="dropbtn" href="/blogsG">Blogs</button>
                   <div class="dropdown-content">
                     <a href="/blogsG">General</a>
-                    <a href="/error">Mass News</a>
+                    <a href="/massnews">Mass News</a>
                     <a href="/error">Pop</a>
                     <a href="/error">Sports</a>
                     <a href="/error">Featured</a>
